<resources>
    <string name="app_name">Jhaisales</string>

    <string name="title_activity_home">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Registros</string>
    <string name="menu_slideshow">Perfil</string>
    <string name="pedido">Pedidos</string>
    <string name="datosC">Registro De Clientes</string>
    <string name="clientes">Lista De Clientes</string>

    <style name="roundedImageViewRounded">
        <item name="cornerFamily">rounded</item>
        <item name="cornerSize">50%</item>
    </style>

    <string-array name="opciones_menu">
        <item>Avon</item>
        <item>Andrea</item>
        <item>Betterware</item>
        <item>Fuller</item>
        <item>Vianney</item>
        <item>Ilusion</item>
    </string-array>

    <style name="SpinnerItemStyle" parent="android:Widget.TextView.SpinnerItem">
        <!-- Personaliza los atributos del estilo -->
        <item name="android:textColor">@color/cat</item>
        <item name="android:textSize">16sp</item>
        <!-- Otros atributos de estilo -->
    </style>


</resources>