<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/addproduct"
            android:title="Añadir productos" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/perfil"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/pedidos"
            android:icon="@drawable/pedido"
            android:title="@string/pedido" />

        <item
            android:id="@+id/datosCliente"
            android:icon="@drawable/clientes"
            android:title="@string/datosC" />



    </group>

    <item
        android:title="Catalogos"/>

    <group>
        <item
            android:id="@+id/nav_avon2"
            android:icon="@drawable/catalogo"
            android:title="AVON"/>

        <item
            android:id="@+id/nav_andrea"
            android:icon="@drawable/catalogo"
            android:title="ANDREA"/>

        <item
            android:id="@+id/nav_betteware"
            android:icon="@drawable/catalogo"
            android:title="BETTEWARE"/>

        <item
            android:id="@+id/nav_fuller"
            android:icon="@drawable/catalogo"
            android:title="FULLER"/>

        <item
            android:id="@+id/nav_vianney"
            android:icon="@drawable/catalogo"
            android:title="VIANNEY"/>

        <item
            android:id="@+id/nav_ilusion"
            android:icon="@drawable/catalogo"
            android:title="ILUSION"/>
    </group>

</menu>